Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Clicking to open the popup for photo widgets will not refresh anymore the document page
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-